--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <script type="text/javascript">
     (function(){
         emailjs.init({
-            publicKey: "4ujvHPvPSSJz6HRLR",
+            publicKey: "YdbNifjAR-GbWqh1a",
         });
     })();
     </script>
@@ -47,7 +47,7 @@
                     <!-- <div class="navbar-nav m-auto mb-2 mb-lg-0"> -->
                         <div class="nav-bar d-flex text-center p-3">
                             <a class="nav-item text-decoration-none txt-light text-lg-dark border-sm" href="product.html">Our Products</a>
-                            <a class="nav-item  text-decoration-none txt-light text-lg-dark" href="aboutUs.html">About us</a>
+                            <a class="nav-item  text-decoration-none txt-light text-lg-dark" onclick="window.location.href='/aboutus.html'">About us</a>
                         </div>
                     <!-- </div> -->
                 </nav>
