--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Floyem</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
@@ -13,6 +13,7 @@
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="icon" href="/asset/logo-- 1.png">
 </head>
 <body class="w-100 h-auto">
 
@@ -67,7 +68,7 @@
         <div class="content d-sm-block d-lg-flex justify-content-evenly">
             <div class="textbox mt-4 w-40">
                 <h2 class="custom-size fw-bold .bold-text-colour ">Fueling Food Innovation, From Source to Table</h2>
-                <p class="parag p-colour font-center text-lg-start m-small w-75">Your trusted partner in food excellence with an overflowing supply of nutritious products for all.</p>
+                <p class="parag p-colour font-center text-lg-start m-small w-100 w-lg-75">Your trusted partner in food excellence with an overflowing supply of nutritious products for all.</p>
 
                 <button class="btn" onclick="window.location.href='/product.html'">
                     <span class="align-items-center">
@@ -136,7 +137,8 @@
                             <h5 class="fw-bolder">Calcium propionate Flobake</h5>
                             <p>Your favourite preservative is available for supply. 
                                 Maintains quality and prevents spoilage of your products
-                                 for a long time.</p>
+                                 for a long time.
+                            </p>
                         </div>
                     </div>
                     
