--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
 
-                <nav class="menu nav collapse d-flex justify-content-around navbar-collapse" id="navbarSupportedContent">
+                <nav class="menu nav collapse d-flex justify-content-start navbar-collapse" id="navbarSupportedContent">
                     
                     <div class="nav-bar d-flex text-center p-3">
                         <a class="nav-item text-decoration-none  text-lg-dark txt-light border-sm" href="product.html">Our Products</a>
@@ -49,7 +49,7 @@
                     </div>
                     <button class="btn btn-light" id="menu-button" onclick="window.location.href='/contact.html'">
                         <span class="align-items-center">
-                            <span class="small text-primary">Contact us</span>
+                            <p class="small text-primary">Contact us</p>
                         </span>
                     </button>
                 </div>
