--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
 
-                <nav class="menu nav collapse d-flex justify-content-around navbar-collapse" id="navbarSupportedContent">
+                <nav class="menu nav collapse d-flex justify-content-start navbar-collapse" id="navbarSupportedContent">
                     <!-- <div class="navbar-nav m-auto mb-2 mb-lg-0"> -->
                         <div class="nav-bar d-flex text-center p-lg-3">
                             <a class="nav-item text-decoration-none text-lg-dark txt-light border-sm" id href="product.html">Our Products</a>
@@ -54,7 +54,7 @@
                     </div>
                     <button class="btn btn-light" id="menu-button" onclick="window.location.href='/contact.html'">
                         <span class="align-items-center">
-                            <span class="small text-primary">Contact us</span>
+                            <h6 class="small text-primary">Contact us</h6>
                         </span>
                     </button>
                 </div>
@@ -70,7 +70,7 @@
                 <h2 class="custom-size fw-bold .bold-text-colour ">Fueling Food Innovation, From Source to Table</h2>
                 <p class="parag p-colour font-center text-lg-start m-small w-100 w-lg-75">Your trusted partner in food excellence with an overflowing supply of nutritious products for all.</p>
 
-                <button class="btn" onclick="window.location.href='/product.html'">
+                <button class="btn"  id="btn" onclick="window.location.href='/product.html'">
                     <span class="align-items-center">
                         <span class="small text-light">check our products</span>
                     </span>
@@ -237,7 +237,7 @@
 
                 <button class="btn btn-primary" onclick="window.location.href='/aboutus.html'">
                     <span class="align-items-center">
-                        <span class="small text-light">Read more</span>
+                        <h6 class="small text-light">Read more</h6>
                     </span>
                 </button>
             </div>
