--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <!-- <div class="navbar-nav m-auto mb-2 mb-lg-0"> -->
                         <div class="nav-bar d-flex text-center p-lg-3">
                             <a class="nav-item text-decoration-none text-lg-dark txt-light border-sm" id href="product.html">Our Products</a>
-                            <a class="nav-item  text-decoration-none  text-lg-dark txt-light" href="aboutUs.html">About us</a>
+                            <a class="nav-item  text-decoration-none  text-lg-dark txt-light" href="aboutus.html">About us</a>
                         </div>
                     <!-- </div> -->
                 </nav>
