--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
 
-                <nav class="menu nav collapse d-flex justify-content-start navbar-collapse" id="navbarSupportedContent">
+                <nav class="menu nav collapse d-flex justify-content-between navbar-collapse" id="navbarSupportedContent">
                     <!-- <div class="navbar-nav m-auto mb-2 mb-lg-0"> -->
                         <div class="nav-bar d-flex text-center p-3">
                             <a class="nav-item text-decoration-none txt-light text-lg-dark border-sm" href="product.html">Our Products</a>
