--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <button class="btn"  id="btn" onclick="window.location.href='/product.html'">
                     <span class="align-items-center">
-                        <span class="small text-light">Check our products</span>
+                        <span class="small text-light">Check Our Products</span>
                     </span>
                 </button>
                 
@@ -98,7 +98,7 @@
                     <img class="card-img-top" src="/asset/1 3.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Fat-filled milk</h5>
+                            <h5 class="fw-bolder">Fat-filled Milk</h5>
                             <p class="">Save cost with Fat-Filled Milk made by blending skim milk with vegetable fats. 
                                 An effective alternative to whole milk used to produce infant formulas, yoghurt,
                                 cheese and ice cream.
@@ -112,7 +112,7 @@
                     <img class="card-img-top" src="/asset/1 2.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Corn starch</h5>
+                            <h5 class="fw-bolder">Corn Starch</h5>
                             <p>A chef’s favourite thickening agent. Also used to thicken and stabilize drinks 
                                 like smoothies and milkshakes.</p>
                         </div>
@@ -136,7 +136,7 @@
                     <img class="card-img-top mt-4" src="/asset/5.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Calcium propionate Flobake</h5>
+                            <h5 class="fw-bolder">Calcium Propionate Flobake</h5>
                             <p>Your favourite preservative is available for supply. 
                                 Maintains quality and prevents spoilage of your products
                                  for a long time.
@@ -198,7 +198,7 @@
                     <img class="card-img-top mt-4" src="/asset/8.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Dry Hibiscus flowers</h5>
+                            <h5 class="fw-bolder">Dry Hibiscus Flowers</h5>
                             <p>Dried petals of the hibiscus plant used to make herbal teas and extracts
                             </p>
                         </div>
