--- a/product.html
+++ b/product.html
@@ -72,7 +72,7 @@
 
     <section>
         <div class="container w-100">
-            <h1 class="m-5 text-center fs-2">Chemical products</h1>
+            <h1 class="m-5 text-center fs-2">Chemical Products</h1>
 
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
@@ -80,7 +80,7 @@
                     <img class="card-img-top" src="/asset/1 3.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Fat-filled milk</h5>
+                            <h5 class="fw-bolder">Fat-filled Milk</h5>
                             <p>Save cost with Fat-Filled Milk made by blending skim milk with vegetable fats. 
                                 An effective alternative to whole milk used to produce infant formulas, yoghurt,
                                  cheese and ice cream.</p>
@@ -93,7 +93,7 @@
                     <img class="card-img-top" src="/asset/1 2.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-lg-bolder">Corn starch</h5>
+                            <h5 class="fw-lg-bolder">Corn Starch</h5>
                             <p>A chef’s favourite thickening agent. Also used to thicken and stabilize drinks 
                                 like smoothies and milkshakes.</p>
                         </div>
@@ -117,7 +117,7 @@
                     <img class="card-img-top mt-4" src="/asset/5.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Calcium propionate Flobake</h5>
+                            <h5 class="fw-bolder">Calcium Propionate Flobake</h5>
                             <p>Your favourite preservative is available for supply. 
                                 Maintains quality and prevents spoilage of your products
                                  for a long time.</p>
@@ -199,7 +199,7 @@
             </button>
 
 
-            <h1 class="m-5 text-center fs-2" id="food">Food products</h1>
+            <h1 class="m-5 text-center fs-2" id="food">Food Products</h1>
 
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
@@ -241,7 +241,7 @@
                     <img class="card-img-top mt-4" src="/asset/8.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <h5 class="fw-bolder">Dry Hibiscus flowers</h5>
+                            <h5 class="fw-bolder">Dry Hibiscus Flowers</h5>
                             <p>Dried petals of the hibiscus plant used to make herbal teas and extracts
                             </p>
                         </div>
