--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="card h-100">
-                    <img class="card-img-top mt-4" src="/asset/5.png" alt="..." />
+                    <img class="card-img-top" src="/asset/product 1.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">Calcium Propionate Flobake</h5>
