--- a/product.html
+++ b/product.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="card border-0 h-100">
-                    <img class="card-img-top mt-4" src="/asset/5.png" alt="..." />
+                    <img class="card-img-top mt-4" src="/asset/product 1.png" alt="..." />
                     <div class="card-body p-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">Calcium Propionate Flobake</h5>
