--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/contact.css" rel="stylesheet" />
     <title>Document</title>
+    <link rel="icon" href="/asset/logo-- 1.png">
 
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
