--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
                     
                     <div class="nav-bar d-flex text-center p-3">
                         <a class="nav-item text-decoration-none  text-lg-dark txt-light border-sm" href="product.html">Our Products</a>
-                        <a class="nav-item  text-decoration-none  text-lg-dark txt-light" href="aboutUs.html">About us</a>
+                        <a class="nav-item  text-decoration-none  text-lg-dark txt-light" href="aboutus.html">About us</a>
                     </div>
                    
                     <div class="button-box">
