--- a/product.html
+++ b/product.html
@@ -37,7 +37,7 @@
                 <nav class="menu nav collapse d-flex justify-content-between navbar-collapse" id="navbarSupportedContent">
                         <div class="nav-bar w-sm-100 d-lg-flex text-center p-3">
                             <a class="nav-item w-sm-100 text-decoration-none border-sm txt-light text-lg-dark" href="product.html">Our Products</a>
-                            <a class="nav-item w-sm-100  text-decoration-none txt-light text-lg-dark" href="aboutUs.html">About us</a>
+                            <a class="nav-item w-sm-100  text-decoration-none txt-light text-lg-dark" href="aboutus.html">About us</a>
                         </div>
                     
                         <div class="button-box">
