--- a/index.html
+++ b/index.html
@@ -89,19 +89,18 @@
     </div>
 
     <section class="w-100 h-auto">
-        <div class="container w-100">
+        <div class="container w-100 p-3">
             <h1 class="m-5 text-center fs-sm-2 fs-lg-3">Chemical Products</h1>
 
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
                 <div class="card h-100">
                     <img class="card-img-top" src="/asset/1 3.png" alt="..." />
-                    <div class="card-body p-4">
+                    <div class="card-body p-1 p-lg-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">Fat-filled Milk</h5>
-                            <p class="">Save cost with Fat-Filled Milk made by blending skim milk with vegetable fats. 
-                                An effective alternative to whole milk used to produce infant formulas, yoghurt,
-                                cheese and ice cream.
+                            <p class="">Fat-filled milk is a blend of skimmed milk and vegetable fats, 
+                                used as a cost-effective alternative to whole milk in products like yogurt, cheese, and ice cream.
                             </p>
                         </div>
                     </div>
@@ -110,7 +109,7 @@
 
                 <div class="card h-100">
                     <img class="card-img-top" src="/asset/1 2.png" alt="..." />
-                    <div class="card-body p-4">
+                    <div class="card-body p-1 p-lg-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">Corn Starch</h5>
                             <p>A chef’s favourite thickening agent. Also used to thicken and stabilize drinks 
@@ -122,7 +121,7 @@
 
                 <div class="card h-100" id="m-top">
                     <img class="card-img-top" src="/asset/4.png" alt="..." />
-                    <div class="card-body p-4">
+                    <div class="card-body  p-1 p-lg-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">Sodium Bicarbonate</h5>
                             <p>Enhance sweetness without calories with this artificial sweetener
@@ -133,8 +132,8 @@
                 </div>
 
                 <div class="card h-100">
-                    <img class="card-img-top" src="/asset/product 1.png" alt="..." />
-                    <div class="card-body p-4">
+                    <img class="card-img-top mt-3" src="/asset/product 1.png" alt="..." />
+                    <div class="card-body p-1 p-lg-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">Calcium Propionate Flobake</h5>
                             <p>Your favourite preservative is available for supply. 
