--- a/aboutus.html
+++ b/aboutus.html
@@ -72,18 +72,19 @@
     <div class="span-light-bg"></div>
     <div class="span-light-blue" id="big-blue"></div>
 
-    <div class="text-container p-5" id="mar">
+    <div class="text-container p-3 p-lg-5" id="mar">
         <p>Floyem Pharmaceuticals & Chemicals Limited is an indigenous company that specializes in the distribution 
             and marketing of raw materials to both Pharmaceutical Companies and Food Industries. <br>
             Our efficient global logistics system and supply chain helps us deliver high-quality, 
             pure, and natural extracts promptly without interruption. 
-            We also promote local agriculture by supporting farmers in Nigeria to export high quality 
+        </p>
+        <p> We also promote local agriculture by supporting farmers in Nigeria to export high quality 
             raw materials and food products to global markets.  
             With Floyem, say goodbye to counterfeit or substandard pharmaceutical products, regulatory hurdles, 
             inefficient logistics, late distribution, and increased production cost.</p>
     </div>
 
-    <div class="text-container p-5" id="margin-increase">
+    <div class="text-container p-3 p-lg-5" id="margin-increase">
         <h3 class="mb-3">Our History</h3>
 
         <p>30 YEARS OF PHARMACEUTICAL EXCELLENCE AND FOOD SAFETY</p>
@@ -93,13 +94,17 @@
             the diaspora.<br>
             We thought of how best to save the world and realized that a better world starts from better nutrition which is tied to better 
             food industries. <br>
-            By establishing a local presence in Nigeria, we eliminated the hurdles and complications of importation and deliver high-quality pharmaceutical solutions right where you need them.
+            </p>
+
+            <p>
+                By establishing a local presence in Nigeria, we eliminated the hurdles and complications of importation and deliver high-quality pharmaceutical solutions right where you need them.
             At Floyem, we connect local industries with upscale pharmacy products and services abroad and also export Nigeria’s finest raw materials to the world.
             <br>We are here to help food and pharmaceutical industries save cost, provide healthy products to their customers and increase their company reputation by 
             providing high quality and healthy raw materials at cost-effective prices.<br>
-            Over the years, we have expanded to establishing offices in the US, China, Lagos, Kano, and Akure. 
-            Shaped by our history, we understand that trust, reliability, consistency and experience are essential to being a reliable supplier.
-            
+            </p>
+
+            <p>Over the years, we have expanded to establishing offices in the US, China, Lagos, Kano, and Akure. 
+                Shaped by our history, we understand that trust, reliability, consistency and experience are essential to being a reliable supplier.
             </p>
     </div>
 
@@ -133,8 +138,9 @@
                     <div class="yellow">
                         
                     </div>
-                    <h5>Exporting</h5>
-                    <p>Partnering with Nigerian farmers to bring high-quality products to global markets.
+                    <h5>Importation</h5>
+                    <p>Partnering with the best in pharmaceuticals and Chemical related items to bring 
+                        about high-quality products to the local markets.
                     </p>
                 </div>
             </div>
