--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
             
         </div>
 
-        <div class="numbers d-lg-flex justify-content-between">
+        <div class="numbers w-100 d-lg-flex justify-content-between">
             <div class="no d-flex">
                 <div class="icon1"></div>
                 <h5 id="numberDiv1">+234 898 898 4599</h5>
@@ -144,7 +144,7 @@
         </div>
     </section>
 
-    <section class="text-container " id="two">
+    <section class="text-container " id="three">
         <div class="text-icon d-flex w-100 justify-content-between" id="space">
             <div class="text">
                 <h3 class="font-color header m-0">Location</h3>
@@ -158,19 +158,19 @@
             
         </div>
 
-        <div class="numbers d-flex w-100 w-lg-75 justify-content-between">
+        <div class="contact d-flex w-100 w-lg-75 justify-content-between">
             <div class="address">
-                <p>Head office</p>
+                <h3>Head office</h3>
                 <h4>Lagos Office</h4>
                 <p>1 Ahme street</p>
             </div>
             <div class="address">
-                <p>Address Line 2</p>
+                <h3>Address Line 2</h3>
                 <h4>Kano Office</h4>
                 <p>7E, Bello Road, Opposite Zenith bank, Kano.</p>
             </div>
             <div class="address">
-                <p>Address Line 3</p>
+                <h3>Address Line 3</h3>
                 <h4>Lagos Office</h4>
                 <p>1 Ahme street</p>
             </div>
