--- a/product.html
+++ b/product.html
@@ -83,7 +83,8 @@
                         <div class="text-center">
                             <h5 class="fw-bolder">Monosodium Glutamate</h5>
                             <div class="content" id="content">
-                                    <p class="text">Your favorite preservative is available for supply. Maintains quality and prevents spoilage of your products for a long time. Here’s some additional information that will be shown when you click "Read More"...</p>
+                                    <p class="text">Your favorite preservative is available for supply. Maintains quality and prevents spoilage of your products for a long time. 
+                                        </p>
                             </div>
                             <button class="readMoreBtn">Read More</button>
                             
