--- a/contact.html
+++ b/contact.html
@@ -162,16 +162,21 @@
             <div class="address">
                 <h3>Head office</h3>
                 <h4>Lagos Office</h4>
-                <p>1 Ahme street</p>
+                <p>1 Ahme street, off olufemi Lawanson</p>
             </div>
             <div class="address">
-                <h3>Address Line 2</h3>
+                <h3>Address 2</h3>
                 <h4>Kano Office</h4>
                 <p>7E, Bello Road, Opposite Zenith bank, Kano.</p>
             </div>
             <div class="address">
-                <h3>Address Line 3</h3>
-                <h4>Lagos Office</h4>
+                <h3>Address 3</h3>
+                <h4>US office</h4>
+                <p>1 Ahme street</p>
+            </div>
+            <div class="address">
+                <h3>Address 3</h3>
+                <h4>China office</h4>
                 <p>1 Ahme street</p>
             </div>
         </div>
