--- a/product.html
+++ b/product.html
@@ -381,7 +381,7 @@
                             <h5 class="fw-bolder">Toxidex</h5>
                             <div class="content" id="content">
                                 
-                                <p class="text">Toxidex is a broad spectrum mycoloxin binding agent. 
+                                <p class="text">Toxidex is a broad spectrum Mycotoxins binding agent. 
                                     This product is indicated for use in all livestock feed preparartions 
                                     including aquatic rations. The efficiency and bio-avaliability of toxidex is second to none. 
                                 </p>
@@ -417,8 +417,8 @@
                             <h5 class="fw-bolder">Faczyme</h5>
                             <div class="content" id="content">
                                 
-                                <p class="text">Faczyme is a complex/multi-feed enzyme. It is an feed additive used in animal feed to improve digestion and nutrient absorption. 
-                                    It helps break down complex feed components, 
+                                <p class="text">Faczyme is a complex/multi-feed enzyme. It is a feed additive used in animal feed to improve digestion and nutrient absorption. 
+                                    It helps breakdown complex feed components, 
                                     making nutrients more accessible and enhancing overall animal health and growth.
                                 </p>
                             </div>
