--- a/aboutus.html
+++ b/aboutus.html
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <section class="fourth d-lg-flex d-block gradient-background" >
+    <section class="fourth d-md-flex d-lg-flex d-block gradient-background" >
         <div class="text1">
             <h5>Our Vision</h5>
             <p>To enhance global health and better consumer well-being by elevating local food industry standards through our premium pharmaceutical products and food products.
@@ -166,9 +166,9 @@
         </div>
     </section>
 
-    <section class="five m-auto pt-5">
+    <section class="five  m-auto pt-5">
         <h4 class="mt-lg-5 text-center">Our Core Values</h4>
-        <div class="boxes d-lg-flex">
+        <div class="boxes d-md-flex d-lg-flex">
             <div class="text text-center p-3">
                 <h4>Reliability</h4>
                 <p>We consistently deliver on our promises to ensure trust and dependability.</p>
