--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         
 
-        <div class="content d-sm-block d-lg-flex justify-content-evenly">
+        <div class="content d-sm-block d-md-flex d-lg-flex justify-content-md-between justify-content-lg-evenly">
             <div class="textbox mt-4 w-40">
                 <h2 class="custom-size fw-bold .bold-text-colour ">Fueling Food Innovation, From Source to Table</h2>
                 <p class="parag p-colour font-center text-lg-start m-small w-100 w-lg-75">Your trusted partner in food excellence with an overflowing supply of nutritious products for all.</p>
@@ -252,7 +252,7 @@
             we export pure, high-quality products to the world. 
         </p>
 
-        <div class="fluid-container d-block d-lg-flex mb-5">
+        <div class="fluid-container d-block d-md-flex d-lg-flex mb-5">
             <div class="textbox">
                 <div class="img" id="prod"></div>
                 <p>Empower food industries with quality pharmaceutical ingredients and global expertise</p>
